fix some errors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News Website</title>
+    <title>News Project</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">News Website</a>
+        <a class="navbar-brand" href="#">News</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,7 +48,7 @@
         <div class="col-md-8" id="newsContainer">
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card position-fixed">
             <div class="card-body">
               <h5 class="card-title">Add New News</h5>
               <form id="addNews">
